# vxcc

./: CMakeLists.txt  main.c  vxcc.h  vxcc_backend.h  vxcc_frontend.h
backend/x86/: backend.c  backend.h  regalloc.c  regalloc.h  tempalloc.c  test.c
backend/x86/asm/: emit_loc.c
backend/x86/op/: move.c
backend/x86/regalloc/: get_best_reg.c  reg_init.c  regalloc.c  regalloc.h
backend/x86/stackalloc/: stackalloc.c  stackalloc.h
